---------------------------------------------------------------------------------------------------
Version: 3.0.3
Date: ??????
  Bugfixes:
    - Fix another notes gui error. #66
---------------------------------------------------------------------------------------------------
Version: 3.0.2
Date: ??????
  Bugfixes:
    - Fix rotating for real this time. (reverse saved rotate disabled due to factorio bug in .16.3)
    - Fix sticky-sign/note error.
    - Fix notes gui error.
---------------------------------------------------------------------------------------------------
Version: 3.0.1
Date: ??????
  Bugfixes:
    - No longer rotate entities when holding an item in your hand.
    - Remove uneeded code on planner menu.
    - Fix nil error
---------------------------------------------------------------------------------------------------
Version: 3.0.0
Date: ??????
  Features:
    - Moved data only tweaks to seperate mod. "Picker Tweaks"
    - Using 0.16.0 API
    - Update STDLIB to 0.9.0
    - Added in belt reverser
    - Ghosts can be rotated (using rotate and reverse rotate key)
    - Added Deltic Honk, Tank Honk, and Car Honk
    - Added Auto Deconstruct of finished miners
    - Added Vehicle Snapping  /snap to toggle snapping on and off
    - Added Map Ping
    - Using the smart pipette on items on ground will pick them up
    - using the smart pipette on item request proxies will attempt to fill them from your inventory
  Changes:
    - Saved dollies are rotated with the rotate and reverse rotate keys (default R and SHIFT + R)
    - Adjustment Pad keybinds are now tied to terrain increase and decrease size keys
    - Sticky Note related technologies and prototypes have been moved to "Picker Tweaks"
  Bugfixes:
    - Many bugfixes.
  Optimisations:
    - Many code optimisations.
---------------------------------------------------------------------------------------------------
Version: 1.0.0
Date: ??????
  Features:
    - Sticky Notes.
    - Quick Blueprinter.